# pyxel-lander

./: .gitignore  .isort.cfg  LICENSE  README.md  makefile  pyproject.toml  pyxel_lander.py  requirements-dev.txt  requirements.txt  setup.py  tasks.py
.github/workflows/: packaging.yml
images/: icon.icns
lander/: __init__.py  constans.py  game.py  lunar_module.py  moon.py  utils.py
lander/assets/: assets.pyxel  assets.pyxres
pyxel_lander/: __init__.py  __main__.py  constants.py  game.py  lunar_module.py  moon.py  utils.py
pyxel_lander/assets/: assets.pyxres
