[tool.poetry]
name = "pyxel-lander"
version = "1.4.0"
description = "Lunar Lander game tribute written in Python with Pyxel retro game engine"
authors = ["Humberto Rocha <humrochagf@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/humrochagf/pyxel-lander"
classifiers = [
  "Environment :: X11 Applications",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Desktop Environment",
  "Topic :: Games/Entertainment :: Arcade",
  "Topic :: Games/Entertainment :: Simulation"
]

[tool.poetry.scripts]
pyxel-lander = "pyxel_lander:Game"

[tool.poetry.dependencies]
python = "^3.7"
pyxel = "^1.5.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
invoke = "^1.6.0"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "pyxel_lander"
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
