[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyxel-lander"
description = "Lunar Lander game tribute written in Python with Pyxel retro game engine"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = [
  "pyxel",
  "games",
  "retro",
]
authors = [
  { name = "Humberto Rocha", email = "humrochagf@gmail.com" },
]
classifiers = [
  "Environment :: X11 Applications",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python",
  "Topic :: Desktop Environment",
  "Topic :: Games/Entertainment :: Arcade",
  "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
  "pyxel>=1.9",
]
dynamic = ["version"]

[project.scripts]
pyxel-lander = "pyxel_lander:Game"

[project.urls]
Documentation = "https://github.com/humrochagf/pyxel-lander#readme"
Issues = "https://github.com/humrochagf/pyxel-lander/issues"
Source = "https://github.com/humrochagf/pyxel-lander"

[tool.hatch.version]
path = "pyxel_lander/constants.py"

[tool.hatch.envs.default]
dependencies = [
  "black",
  "isort",
  "flake8",
  "invoke",
]

[tool.black]
exclude = [
  ".mypy_cache",
  ".hatch",
]

[tool.isort]
profile = "black"
skip = [
  ".mypy_cache",
  ".hatch",
]
